create easy setup for demo deployment